# slambook

ch10/g2o_custombundle/: CMakeLists.txt  g2o_bal_class.h  g2o_bundle.cpp  tempCodeRunnerFile
ch10/g2o_custombundle/ceres/: autodiff.h  eigen.h  fixed_array.h  fpclassify.h  jet.h  macros.h  manual_constructor.h  variadic_evaluate.h
ch10/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h
ch10/g2o_custombundle/common/flags/: command_args.cpp  command_args.h
ch11/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp  result_lie.g2o
ch11/cmake_modules/: FindCholmod.cmake
ch12/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
ch13/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
ch13/dense_monocular/: CMakeLists.txt  dense_mapping.cpp
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useEigen/.kdev4/: useEigen.kdev4
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/useGeometry/.kdev4/: useGeometry.kdev4
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch4/useSophus/.kdev4/: useSophus.kdev4
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/imageBasics/.kdev4/: imageBasics.kdev4
ch5/joinMap/: CMakeLists.txt  joinMap.cpp
ch5/joinMap/.kdev4/: joinMap.kdev4
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/ceres_curve_fitting/.kdev4/: ceres_curve_fitting.kdev4
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/.kdev4/: g2o_curve_fitting.kdev4
ch7/feature_extraction/: CMakeLists.txt  feature_extraction.cpp
ch7/pose_estimation_2d2d/: CMakeLists.txt  pose_estimation_2d2d.cpp
ch7/pose_estimation_3d2d/: CMakeLists.txt  pose_estimation_3d2d.cpp
ch7/pose_estimation_3d3d/: CMakeLists.txt  pose_estimation_3d3d.cpp
ch7/triangulation/: CMakeLists.txt  triangulation.cpp
ch8/directMethod/: direct_semidense.cpp  direct_sparse.cpp
ch8/useLK/: CMakeLists.txt  useLK.cpp
ch9/project/0.1/include/myslam/: config.h  frame.h  mappoint.h
ch9/project/0.1/src/: camera.cpp  mappoint.cpp
ch9/project/0.2/config/: default.yaml
ch9/project/0.2/include/myslam/: camera.h  visual_odometry.h
ch9/project/0.2/test/: run_vo.cpp
ch9/project/0.3/config/: default.yaml
ch9/project/0.3/include/myslam/: common_include.h  visual_odometry.h
ch9/project/0.3/src/: visual_odometry.cpp
ch9/project/0.4/: CMakeLists.txt
ch9/project/0.4/config/: default.yaml
ch9/project/0.4/include/myslam/: g2o_types.h  map.h  mappoint.h  visual_odometry.h
ch9/project/0.4/src/: frame.cpp  visual_odometry.cpp
ch9/project/0.4/test/: run_vo.cpp
